test_programs/compile_failure/comptime_as_typed_expr_pub_crate/foo/src/lib.nr
pub mod bar {
    pub(crate) fn crate_only() -> Field {
        42
    }
}
